[package]
name = "utils"
version = "0.1.0"
authors = ["Nicolas Jouanno <nicolas.jouanno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0.1", features = ["full"] }
mongodb = { version = "2.0.0-alpha", default-features = false, features = ["tokio-runtime"] }